<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayActivity">


    <Chronometer
        android:id="@+id/chmeter_GameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tc_LabelGametimer"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/tc_LabelGametimer"
        app:layout_constraintTop_toBottomOf="@+id/tc_LabelGametimer" />

    <TextView
        android:id="@+id/tv_LabelMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mine_count"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tc_LabelGametimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/timer"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toEndOf="@+id/tv_LabelMines"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_MinesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_12"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_LabelMines"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="@+id/tv_LabelMines"
        app:layout_constraintTop_toBottomOf="@+id/tv_LabelMines" />

    <ImageButton
        android:id="@+id/imgBtn_Restart"
        android:layout_width="70dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imgbtn_Restart"
        app:layout_constraintBottom_toTopOf="@+id/gameBoard"
        app:layout_constraintStart_toEndOf="@+id/tv_LabelMines"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/ic_baseline_refresh_24" />

    <LinearLayout

        android:id="@+id/gameBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_MinesCount" />


    <ImageButton
        android:id="@+id/imgBtn_Mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toStartOf="@+id/chmeter_GameTimer"
        app:layout_constraintStart_toEndOf="@+id/imgBtn_Restart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bomb" />



</androidx.constraintlayout.widget.ConstraintLayout>