<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="#E4E4E4E4"
    app:layout_anchorGravity="top"
    tools:context=".MainActivity">


<!--    <TextView-->
<!--        android:id="@+id/tv_OR"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/str_Or"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_BestTime"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="24dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/str_BestTime"-->
<!--        android:textAlignment="viewStart"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/textViewHeading"-->
<!--        app:layout_constraintHorizontal_bias="0.556"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textViewHeading"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewHeading" />-->

<!--    <TextView-->
<!--        android:id="@+id/textViewHeading"-->
<!--        android:layout_width="450dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="22dp"-->
<!--        android:layout_marginBottom="90dp"-->
<!--        android:text="@string/main_Heading"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#EA0C0C"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tv_BestTime"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.454"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.32" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_LastGameTime"-->
<!--        android:layout_width="234dp"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:text="@string/str_LastTime"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/tv_BestTime"-->
<!--        app:layout_constraintHorizontal_bias="0.488"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_BestTime"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_BestTime" />-->

<!--    <RadioGroup-->
<!--        android:id="@+id/radioGroup"-->
<!--        android:layout_width="101dp"-->
<!--        android:layout_height="144dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:gravity="start|end"-->
<!--        android:orientation="vertical"-->
<!--        android:textDirection="firstStrongRtl"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_SelectDiff">-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_Easy"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:text="@string/str_Easy"-->
<!--            android:textColor="#616161" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_medium"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/str_Medium" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/rb_Hard"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minHeight="48dp"-->
<!--            android:text="@string/str_Hard"-->
<!--            android:textColor="#616161"-->
<!--            tools:ignore="TouchTargetSizeCheck" />-->
<!--    </RadioGroup>-->

<!--    <TextView-->
<!--        android:id="@+id/tv_SelectDiff"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:text="@string/str_DiffSelect"-->
<!--        android:textSize="35sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/tv_LastGameTime"-->
<!--        app:layout_constraintHorizontal_bias="0.376"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_LastGameTime"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_LastGameTime" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/str_BtnMakeBoardTxt"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/tv_OR"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_OR"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_OR"-->
<!--        app:layout_constraintVertical_bias="0.086" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_Start"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="168dp"-->
<!--        android:text="@string/str_BtnStartTxt"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/button"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="@+id/button"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <TextView
                android:id="@+id/toptitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/minesweeper"
                android:textColor="@color/teal_700"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_LabelBesttTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/best_time2"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_BestTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toptitle" />

            <TextView
                android:id="@+id/tv_BestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_0"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_LabelBesttTime"
                app:layout_constraintTop_toBottomOf="@+id/toptitle" />

            <TextView
                android:id="@+id/tv_LabelLastGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_game_time2"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_LastGameTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_LabelBesttTime" />

            <TextView
                android:id="@+id/tv_LastGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_00"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_LabelLastGame"
                app:layout_constraintTop_toBottomOf="@+id/tv_BestTime" />

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/choose_difficulty"
                android:textColor="#00897B"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_LabelLastGame" />

            <RadioGroup
                android:id="@+id/selectGameLevel"
                android:layout_width="180dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/difficulty">

                <RadioButton
                    android:id="@+id/rb_EasyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/easy"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_MediumLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/medium"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_HardLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/hard"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_LabelOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/or"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectGameLevel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_CustomBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                android:background="@drawable/mybutton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/make_a_custom_board"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_LabelOR" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/mybutton"
                android:text="@string/start"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_LabelOR"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_GameRules"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_baseline_question_answer_24"
                android:contentDescription="@string/_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.099"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

